--- a/style.css
+++ b/style.css
@@ -1,119 +1,200 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+    /* box-sizing: border-box; */
+    user-select: none;
+}
+html
+{
+    font-size: 62.5%;
+    box-sizing: border-box;
 }
 
-html {
-  font-size: 62.5%;
-  box-sizing: border-box;
+/* BODY */
+body
+{
+    font-family: 'Press Start 2P', sans-serif;
+    color: #ebe9db;
+    background-color: #100712;
+}
+.win
+{
+    background-color: #1f3000;
+}
+.lose
+{
+    background-color: #500000;
 }
 
-body {
-  font-family: 'Press Start 2P', sans-serif;
-  color: #eee;
-  background-color: #1e1a1a;
-  /* background-color: #60b347; */
+/* HEADER */
+header
+{
+    position: relative;
+    /* height: 35vh; */
+    border-bottom: 10px solid #00c3ff;
+    margin-bottom: 100px;
 }
 
-/* LAYOUT */
-header {
-  position: relative;
-  height: 35vh;
-  border-bottom: 7px solid #eee;
+.section-top
+{
+    margin: 2rem;
+    /* min-width: 400px; */
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    /* overflow: hidden; */
+    min-width: 0;
+    /* background-color: red; */
+}
+#btn-again
+{
+    align-self: left;
+}
+#btn-reload
+{
+    align-self: right;
 }
 
-main {
-  height: 65vh;
-  color: #eee;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+
+.number
+{
+    background: #00c3ff;
+    color: #240024;
+    font-size: 6rem;
+    padding: 3rem 3rem;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
 }
 
-.left {
-  width: 52rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+main
+{
+    /* height: 65vh; */
+    /* color: #eee; */
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.right {
-  width: 52rem;
-  font-size: 2rem;
+
+
+
+.between
+{
+    font-size: 2rem;
+    text-align: center;
+    margin: 2rem 5rem 10rem 5rem;
+    /* display: float-right;
+    top: 4rem;
+    right: 4rem; */
+}
+
+
+.section-left
+{
+    /* width: 52rem; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.section-right
+{
+    /* width: 52rem; */
+    font-size: 2rem;
 }
 
 /* ELEMENTS STYLE */
-h1 {
-  font-size: 4rem;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  top: 52%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+h1 
+{
+    margin-top: 10rem;
+    font-size: 7rem;
+    text-align: center;
+    text-transform: uppercase;
+    /* position: absolute; */
+    /* width: 100%;
+    top: 52%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
 }
 
-.number {
-  background: #eee;
-  color: #333;
-  font-size: 6rem;
-  width: 15rem;
-  padding: 3rem 0rem;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 50%);
+
+
+
+
+/* #btn-again
+{
+    position: absolute;
+    top: 3rem;
+    left: 3rem;
+} */
+
+.guess
+{
+    background: none;
+    border: 4px solid #ebe9db;
+    font-family: inherit;
+    color: inherit;
+    font-size: 6rem;
+    padding: 2rem;
+    width: 25rem;
+    text-align: center;
+    display: block;
+    margin-bottom: 3rem;
+    border-radius: 2rem;
 }
 
-.between {
-  font-size: 1.4rem;
-  position: absolute;
-  top: 2rem;
-  right: 2rem;
+.btn
+{
+    border: none;
+    border-radius: 2rem;
+    background-color: #ffc5c5;
+    color: #222;
+    font-size: 2rem;
+    font-family: inherit;
+    padding: 2rem 3rem;
+    cursor: pointer;
 }
 
-.again {
-  position: absolute;
-  top: 2rem;
-  left: 2rem;
+/* .btn:hover
+{
+
+} */
+.btn:active
+{
+    background-color: #c1ff5d5d;
+    /* background-color: #ccff00; */
 }
 
-.guess {
-  background: none;
-  border: 4px solid #eee;
-  font-family: inherit;
-  color: inherit;
-  font-size: 5rem;
-  padding: 2.5rem;
-  width: 25rem;
-  text-align: center;
-  display: block;
-  margin-bottom: 3rem;
+.message
+{
+    margin-bottom: 6rem;
+    /* height: 3rem; */
+}
+.message-game-over
+{
+    font-size: 6rem;
 }
 
-.btn {
-  border: none;
-  background-color: #eee;
-  color: #222;
-  font-size: 2rem;
-  font-family: inherit;
-  padding: 2rem 3rem;
-  cursor: pointer;
+.label-score
+{
+    margin-bottom: 2rem;
 }
 
-.btn:hover {
-  background-color: #ccc;
+.hidden
+{
+    display: none;
 }
 
-.message {
-  margin-bottom: 8rem;
-  height: 3rem;
-}
-
-.label-score {
-  margin-bottom: 2rem;
+.message, .label-score, .label-high-score
+{
+    text-align: center;
 }
